--- a/layout/css/General.scss
+++ b/layout/css/General.scss
@@ -1,5 +1,16 @@
-.form-signin{
+
   .err{
     color: red;
+  }
+
+
+.form-box{
+  padding: 20px;
+  border-radius: 5px;
+  background-color: white;
+  & h1{
+    color: darkgrey;
+    border-bottom: 1px solid black;
+    font-size: 30px;
   }
 }
