--- a/layout/css/General.scss
+++ b/layout/css/General.scss
@@ -26,3 +26,15 @@
     transform:rotate(180deg);
   }
 }
+
+body > div{
+  margin-top: 70px;
+}
+
+.iLike{
+  background: #afa;
+}
+
+.iLikeBtn{
+  filter: invert(1);
+}
