--- a/layout/css/General.scss
+++ b/layout/css/General.scss
@@ -38,3 +38,10 @@ body > div{
 .iLikeBtn{
   filter: invert(1);
 }
+
+#trash{
+  position:fixed;
+  bottom:20px;
+  width: 256px;
+  z-index: 100;
+}
