--- a/layout/css/General.scss
+++ b/layout/css/General.scss
@@ -16,8 +16,10 @@
 }
 
 .video-box{
-  margin: 70px auto auto;
+  margin: 0px auto 200px auto;
   width: 70%;
+  background-color: whitesmoke;
+
   & video{
     width: 100%;
   }
@@ -25,18 +27,69 @@
   & .dislike{
     transform:rotate(180deg);
   }
+
+  & .vid-likebar{
+    margin-top: 20px;
+    display:flex;
+    & p{
+      flex-grow: 1;
+      font-size: 20px;
+      margin:0;
+    }
+    & div{
+      width:120px;
+    }
+
+    & .iLikeBtn{
+      filter: invert(1);
+
+    }
+  }
+  & >h5{
+    margin-left: 7px;
+  }
+  & > p{
+    border-width: 1px 0 1px 0;
+    border-color: black;
+    border-style: solid;
+    padding: 12px 5px 12px 5px;
+    margin:0px 7px 5px 7px;
+  }
+}
+.comments{
+  margin: 5px 5px 20px;
+
+  & textarea{
+    margin: auto;
+    width: 90%;
+    resize: none;
+    height: 150px;
+  }
+  & button{
+    width: auto;
+  }
+
+}
+#commentList{
+  & h4{
+    border-bottom: 1px black solid;
+    margin-left: 5px;
+    padding-left: 7px;
+    width: 50%;
+  }
+
+}
+#commentList:nth-child(2n){
+  background-color: white;
+}
+body > div{
+    padding-top: 70px !important;
+    margin-bottom: 200px;
 }
 
-body > div{
-  margin-top: 70px;
-}
 
 .iLike{
   background: #afa;
-}
-
-.iLikeBtn{
-  filter: invert(1);
 }
 
 #trash{
@@ -45,3 +98,4 @@ body > div{
   width: 256px;
   z-index: 100;
 }
+
