--- a/layout/css/General.scss
+++ b/layout/css/General.scss
@@ -23,6 +23,12 @@
   & video{
     width: 100%;
   }
+  & audio{
+    width: 100%;
+  }
+  & > img{
+    width: 100%;
+  }
 
   & .dislike{
     transform:rotate(180deg);
@@ -54,6 +60,7 @@
     border-style: solid;
     padding: 12px 5px 12px 5px;
     margin:0px 7px 5px 7px;
+    word-wrap: break-word;
   }
 }
 .comments{
